--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     ports:
      - "5000:5000"
     command:
-      gunicorn -b 0.0.0.0:5000 --chdir src 'app:app'
+      python ./manage.py runserver 0.0.0.0:5000
     volumes:
-      - .:/code
+      - ./mathlearning:/code
