--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,6 @@
 version: '3'
 services:
   web:
-    build: .
-    ports:
-     - "5000:5000"
-    command:
-      python ./manage.py runserver 0.0.0.0:5000
-    volumes:
-      - ./mathlearning:/code
+    build: 
+      context: .
+      dockerfile: ./Dockerfile
