fix simpy version to avoid derivative results on simplify

--- a/mathlearning/docker-compose.yml
+++ b/mathlearning/docker-compose.yml
@@ -4,5 +4,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+    volumes:
+      - '.:/code'
     ports:
       - "127.0.0.1:5000:5000"
