--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,23 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/integration-node-tests/index.js",
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Node Attach",
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
         {   
             "name": "TESTS Django",
             "type": "python",
