--- a/mathlearning/Dockerfile
+++ b/mathlearning/Dockerfile
@@ -3,4 +3,4 @@ ADD . /code
 WORKDIR /code
 EXPOSE 5000
 RUN pip3 install -r requirements.txt
-CMD [ "python", "./manage.py", "runserver", "0.0.0.0:5000" ]
+CMD [ "python", "./manage.py", "runserver" ]
