--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 version: '3'
 services:
   web:
-    build: 
+    build:
       context: .
       dockerfile: ./Dockerfile
-    ports: 
+    volumes:
+      - '.:/code'
+    ports:
       - "127.0.0.1:5000:5000"
